# raw-bank-transaction-enricher

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
data/: transactions.csv
src/: __init__.py  client.py  enricher.py  models.py
